--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 
 [dependencies]
 actix-files = "0.6"
+actix-multipart = "0.5"
 actix-web = "4"
 env_logger = "0.10"
+futures-util = "0.3"
+lazy_static = "1"
 log = "0.4"
+regex = "1"
+uuid = { version = "1.3", features = ["v4"] }
