--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ futures-util = "0.3"
 lazy_static = "1"
 log = "0.4"
 regex = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 uuid = { version = "1.3", features = ["v4"] }
