--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ log = "0.4"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tokio = { version = "1", features = ["macros", "process"] }
+tokio-util = "0.7"
 uuid = { version = "1.3", features = ["v4"] }
