Rebrand to gardener

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: adj90/pd2dsy4web:latest
+          tags: adj90/gardener:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
