--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-files = "0.6"
 actix-multipart = "0.5"
 actix-web = "4"
+anyhow = "1"
 askama = "0.11"
 env_logger = "0.10"
 futures-util = "0.3"
