--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ env_logger = "0.10"
 futures-util = "0.3"
 lazy_static = "1"
 log = "0.4"
+markdown = "0.3"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
