Add timestamps to patch metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ actix-multipart = "0.5"
 actix-web = "4"
 anyhow = "1"
 askama = "0.11"
+chrono = "0.4"
 env_logger = "0.10"
 futures-util = "0.3"
 lazy_static = "1"
