--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ markdown = "0.3"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+thiserror = "1"
 tokio = { version = "1", features = ["macros", "process"] }
 tokio-util = "0.7"
 uuid = { version = "1.3", features = ["v4"] }
